--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="section">Section</string>
     <string name="author">Author</string>
     <string name="noConn">No Connection</string>
+    <string name="empty">The List is Empty</string>
 </resources>
